--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
@@ -80,6 +80,7 @@
             <action method="addItem"><type>skin_js</type><name>js/slideshow.js</name></action>
             <action method="addItem"><type>skin_js</type><name>js/lib/imagesloaded.js</name></action>
             <action method="addItem"><type>skin_js</type><name>js/minicart.js</name></action>
+            <action method="addItem"><type>skin_js</type><name>js/colorSwatch.js</name></action>
         </reference>
 
         <!-- add currency and cart block in header -->
