--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/lightbox/media.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/lightbox/media.phtml
@@ -64,9 +64,10 @@
 </div>
 <?php endif; ?>
 <script type="text/javascript">
+    var $productCarousel;
     jQuery(document).ready(function($) {
 
-        jQuery('a[rel="lighbox-zoom-gallery"]').fancybox({
+        $productCarousel = jQuery('a[rel="lighbox-zoom-gallery"]').fancybox({
             titleShow:false,
             hideOnContentClick:true
         });
