--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/lightbox/media.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/lightbox/media.phtml
@@ -27,8 +27,8 @@
 <?php if ($product->getImage() != 'no_selection' && $product->getImage()): ?>
 
 	<p class="product-image">
-        <a href="<?php echo $this->helper('catalog/image')->init($product, 'image'); ?>" rel="lighbox-zoom-gallery" >
-            <img src="<?php echo $this->helper('catalog/image')->init($product, 'image')->resize(500, 500); ?>" data-srcX2="<?php echo $this->helper('catalog/image')->init($product, 'image')->resize(1000, 1000); ?>" alt="<?php echo $this->escapeHtml($this->getImageLabel());?>" title="<?php echo $this->escapeHtml($this->getImageLabel());?>" />
+        <a class="product-image-link" href="<?php echo $this->helper('catalog/image')->init($product, 'image'); ?>" rel="lighbox-zoom-gallery" >
+            <img class="product-image-img" src="<?php echo $this->helper('catalog/image')->init($product, 'image')->resize(500, 500); ?>" data-srcX2="<?php echo $this->helper('catalog/image')->init($product, 'image')->resize(1000, 1000); ?>" alt="<?php echo $this->escapeHtml($this->getImageLabel());?>" title="<?php echo $this->escapeHtml($this->getImageLabel());?>" />
         </a>
     </p>
 
@@ -36,7 +36,7 @@
 
     <p class="product-image">
         <?php
-            $_img = '<img src="'.$this->helper('catalog/image')->init($product, 'image')->resize($imgX, $imgY).'" data-srcX2="'.$this->helper('catalog/image')->init($product, 'image')->resize(500, 500).'" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" />';
+            $_img = '<img class="product-image-img" src="'.$this->helper('catalog/image')->init($product, 'image')->resize($imgX, $imgY).'" data-srcX2="'.$this->helper('catalog/image')->init($product, 'image')->resize(500, 500).'" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" />';
             echo $outputHelper->productAttribute($product, $_img, 'image');
         ?>
     </p>
@@ -64,50 +64,50 @@
 </div>
 <?php endif; ?>
 <script type="text/javascript">
-    var $productCarousel;
-    jQuery(document).ready(function($) {
-
-        $productCarousel = jQuery('a[rel="lighbox-zoom-gallery"]').fancybox({
-            titleShow:false,
-            hideOnContentClick:true
-        });
-
-        myCarousel = null; // This will be the carousel object
-
-        function mycarousel_initCallback(carousel, state) {
-            if (state == 'init') {
-                myCarousel = carousel;
-            }
-            jQuery('#shopper_gallery_next').bind('click', function() {
-                carousel.next();
-                return false;
-            });
-            jQuery('#shopper_gallery_prev').bind('click', function() {
-                carousel.prev();
-                return false;
-            });
-
-            jQuery('.product-view .product-img-box .more-views .jcarousel-skin-tango .jcarousel-container-horizontal').width(<?php echo ($thumbX+8)*3;?>);
-            jQuery('.product-view .product-img-box .more-views .jcarousel-skin-tango .jcarousel-clip-horizontal').width(<?php echo ($thumbX+8)*3;?>);
-            jQuery('.product-view .product-img-box .more-views .jcarousel-skin-tango .jcarousel-item').width(<?php echo $thumbX;?>);
-            jQuery('#shopper_gallery_prev, #shopper_gallery_next').css({marginTop:-<?php echo ($thumbY)/2+17;?>});
-
-        };
-
-        jQuery('#shopper_gallery_carousel').jcarousel({
-            scroll: 1,
-            initCallback: mycarousel_initCallback,
-            buttonNextHTML: null,
-            buttonPrevHTML: null
-        });
-
-        jQuery(window).resize(function(){
-            var n = jQuery('#shopper_gallery_carousel > li').length;
-            var w = jQuery('#shopper_gallery_carousel > li').outerWidth(true);
-            jQuery('#shopper_gallery_carousel').width(n*w);
-            if ( myCarousel ) myCarousel.scroll(0);
-	        jQuery('#shopper_gallery_prev, #shopper_gallery_next').css({marginTop:-($('.lighbox-zoom-gallery img').height()/2+17)});
-        });
-
-    });
+    ///*var $productCarousel;
+    //jQuery(document).ready(function($) {
+    //
+    //    $productCarousel = jQuery('a[rel="lighbox-zoom-gallery"]').fancybox({
+    //        titleShow:false,
+    //        hideOnContentClick:true
+    //    });
+    //
+    //    myCarousel = null; // This will be the carousel object
+    //
+    //    function mycarousel_initCallback(carousel, state) {
+    //        if (state == 'init') {
+    //            myCarousel = carousel;
+    //        }
+    //        jQuery('#shopper_gallery_next').bind('click', function() {
+    //            carousel.next();
+    //            return false;
+    //        });
+    //        jQuery('#shopper_gallery_prev').bind('click', function() {
+    //            carousel.prev();
+    //            return false;
+    //        });
+    //
+    //        jQuery('.product-view .product-img-box .more-views .jcarousel-skin-tango .jcarousel-container-horizontal').width(<?php //echo ($thumbX+8)*3;?>//);
+    //        jQuery('.product-view .product-img-box .more-views .jcarousel-skin-tango .jcarousel-clip-horizontal').width(<?php //echo ($thumbX+8)*3;?>//);
+    //        jQuery('.product-view .product-img-box .more-views .jcarousel-skin-tango .jcarousel-item').width(<?php //echo $thumbX;?>//);
+    //        jQuery('#shopper_gallery_prev, #shopper_gallery_next').css({marginTop:-<?php //echo ($thumbY)/2+17;?>//});
+    //
+    //    };
+    //
+    //    jQuery('#shopper_gallery_carousel').jcarousel({
+    //        scroll: 1,
+    //        initCallback: mycarousel_initCallback,
+    //        buttonNextHTML: null,
+    //        buttonPrevHTML: null
+    //    });
+    //
+    //    jQuery(window).resize(function(){
+    //        var n = jQuery('#shopper_gallery_carousel > li').length;
+    //        var w = jQuery('#shopper_gallery_carousel > li').outerWidth(true);
+    //        jQuery('#shopper_gallery_carousel').width(n*w);
+    //        if ( myCarousel ) myCarousel.scroll(0);
+	 //       jQuery('#shopper_gallery_prev, #shopper_gallery_next').css({marginTop:-($('.lighbox-zoom-gallery img').height()/2+17)});
+    //    });
+    //
+    //});*/
 </script>
