remove thumbnails to mobile #10780

--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/colorSwatch.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/colorSwatch.css
@@ -16,3 +16,9 @@
 .product-gallery-item-img {
 	max-height: 100px;
 }
+
+@media only screen and (max-width:768px) {
+	.product-gallery {
+		display: none;
+	}
+}
