--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
@@ -105,10 +105,10 @@
           <h4>Contact</h4>
           <div class="to_hide_reaction">
             <p>Jumbo Bag</p>
-            <p>17 rue Jean Bart</p>
+            <p>12 rue Ferrando</p>
             <p>31400 Toulouse France</p>
             <br />
-            <p>+33(0)5 67 68 67 89</p>
+            <p>+33(0)9 72 60 09 18</p>
             <br />
             <p><a href="mailto:contact@jumbobag.fr">contact@jumbobag.fr</a></p>
           </div>
