--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
@@ -190,6 +190,9 @@
 
     <catalog_product_view translate="label">
         <reference name="root">
+            <action method="addBodyClass">
+                <className helper="jumbobag_core/data/getFixBandesBleues" />
+            </action>
             <action method="setTemplate">
                 <template>page/product-and-category.phtml</template>
             </action>
