--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/lightbox/media.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/lightbox/media.phtml
@@ -44,3 +44,10 @@
 <?php endif; ?>
 
 <ul id="product-gallery" class="product-gallery clearfix"></ul>
+
+
+<?php
+if ($product->getData('innersense_id')) {
+    echo $this->getChildHtml('innersense_3dviewer');
+}
+?>
