--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/layout/local.xml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/layout/local.xml
@@ -46,6 +46,7 @@
             <action method="addCss"><stylesheet>css/catalogsearch.css</stylesheet></action>
             <action method="addCss"><stylesheet>css/account.css</stylesheet></action>
             <action method="addCss"><stylesheet>css/colorSwatch.css</stylesheet></action>
+            <action method="addCss"><stylesheet>css/product3dViewer.css</stylesheet></action>
 
             <action ifconfig="shoppersettings/design/override_css" method="addItem"><type>skin_css</type><name>css/override.css</name></action>
 
