--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/product3dViewer.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/product3dViewer.css
@@ -20,14 +20,11 @@
     width: 100%;
     height: 100%;
     transition: opacity 0.3s ease 0.3s;
+}
+.product-sublayout-original .informations-produit .product-images .product-image-3dviewer {
     padding-top: 50px;
 }
+
 .product-image-3dviewer .viewer-3d, .product-image-3dviewer .viewer-3d__viewer {
     height: 100%;
-}
-
-@media screen and (min-width: 768px) {
-    .product-image-3dviewer {
-        padding-top: 50px;
-    }
 }
