--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/product3dViewer.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/product3dViewer.css
@@ -20,11 +20,21 @@
     width: 100%;
     height: 100%;
     transition: opacity 0.3s ease 0.3s;
+    z-index: 1;
 }
 .product-sublayout-original .informations-produit .product-images .product-image-3dviewer {
     padding-top: 50px;
 }
 
 .product-image-3dviewer .viewer-3d, .product-image-3dviewer .viewer-3d__viewer {
+    height: 100%;
+}
+.product-image-3dviewer-link::after {
+    content: '';
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
 }
