--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/lightbox/media.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/lightbox/media.phtml
@@ -25,37 +25,6 @@
 ?>
 
 <?php if ($product->getInnersenseId()): ?>
-    <div class="product-image product-image-3dviewer-container">
-        <a class="product-image-3dviewer-link" href="#3dviewer">
-            <?php
-                $_img = '<img class="product-image-img" src="'.$this->helper('catalog/image')->init($product, 'image')->resize($imgX, $imgY).'" data-srcX2="'.$this->helper('catalog/image')->init($product, 'image')->resize(500, 500).'" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" />';
-                echo $outputHelper->productAttribute($product, $_img, 'image');
-            ?>
-        </a>
-        <div class="product-image-link product-image-3dviewer">
-            <?php echo $this->getChildHtml('innersense_3dviewer'); ?>
-        </div>
-    </div>
-<?php elseif ($product->getImage() != 'no_selection' && $product->getImage()): ?>
-	<p class="product-image">
-        <a class="product-image-link" href="<?php echo $this->helper('catalog/image')->init($product, 'image'); ?>" rel="lighbox-zoom-gallery" >
-            <img class="product-image-img" src="<?php echo $this->helper('catalog/image')->init($product, 'image')->resize(500, 500); ?>" data-srcX2="<?php echo $this->helper('catalog/image')->init($product, 'image')->resize(1000, 1000); ?>" alt="<?php echo $this->escapeHtml($this->getImageLabel());?>" title="<?php echo $this->escapeHtml($this->getImageLabel());?>" />
-        </a>
-    </p>
-<?php else: ?>
-
-    <p class="product-image">
-        <?php
-            $_img = '<img class="product-image-img" src="'.$this->helper('catalog/image')->init($product, 'image')->resize($imgX, $imgY).'" data-srcX2="'.$this->helper('catalog/image')->init($product, 'image')->resize(500, 500).'" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" />';
-            echo $outputHelper->productAttribute($product, $_img, 'image');
-        ?>
-    </p>
-
-<?php endif; ?>
-
-<ul id="product-gallery" class="product-gallery clearfix"></ul>
-
-<?php if ($product->getData('innersense_id')): ?>
     <script type="text/javascript">
         if (!window.viewer3DOptions) {
             window.viewer3DOptions = {}
@@ -101,9 +70,36 @@
             play3dButton.addEventListener('click', function(event) {
                 event.preventDefault();
                 event.stopPropagation();
-                play3dButton.classList.add('product-image-3dviewer-link--hidden');
                 window.viewer3DOptions.ready();
+                document.querySelector('.product-image-3dviewer').classList.remove('product-image-3dviewer--hidden')
             }, false)
         });
     </script>
+
+    <div class="product-image product-image-3dviewer-container">
+        <?php
+            $_img = '<img class="product-image-img" src="'.$this->helper('catalog/image')->init($product, 'image')->resize($imgX, $imgY).'" data-srcX2="'.$this->helper('catalog/image')->init($product, 'image')->resize(500, 500).'" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" />';
+            echo $outputHelper->productAttribute($product, $_img, 'image');
+        ?>
+        <div class="product-image-link product-image-3dviewer product-image-3dviewer--hidden">
+            <?php echo $this->getChildHtml('innersense_3dviewer'); ?>
+        </div>
+    </div>
+<?php elseif ($product->getImage() != 'no_selection' && $product->getImage()): ?>
+	<p class="product-image">
+        <a class="product-image-link" href="<?php echo $this->helper('catalog/image')->init($product, 'image'); ?>" rel="lighbox-zoom-gallery" >
+            <img class="product-image-img" src="<?php echo $this->helper('catalog/image')->init($product, 'image')->resize(500, 500); ?>" data-srcX2="<?php echo $this->helper('catalog/image')->init($product, 'image')->resize(1000, 1000); ?>" alt="<?php echo $this->escapeHtml($this->getImageLabel());?>" title="<?php echo $this->escapeHtml($this->getImageLabel());?>" />
+        </a>
+    </p>
+<?php else: ?>
+
+    <p class="product-image">
+        <?php
+            $_img = '<img class="product-image-img" src="'.$this->helper('catalog/image')->init($product, 'image')->resize($imgX, $imgY).'" data-srcX2="'.$this->helper('catalog/image')->init($product, 'image')->resize(500, 500).'" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" />';
+            echo $outputHelper->productAttribute($product, $_img, 'image');
+        ?>
+    </p>
+
 <?php endif; ?>
+
+<ul id="product-gallery" class="product-gallery clearfix"></ul>
