--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
@@ -375,7 +375,9 @@
             <block type="core/text_list" name="product.info.options.configurable.renderers" as="attr_renderers">
                 <block type="configurableswatches/catalog_product_view_type_configurable_swatches" template="configurableswatches/catalog/product/view/type/options/configurable/swatches.phtml"/></block>
             <block type="core/text_list" name="product.info.options.configurable.after" as="after">
-                <block type="core/template" template="configurableswatches/catalog/product/view/type/configurable/swatch-js.phtml"/></block>
+                <block type="core/template" template="configurableswatches/catalog/product/view/type/configurable/swatch-js.phtml"/>
+                <block type="innersense_3dviewer/simulator" template="innersense/3dviewer_link.phtml" />
+            </block>
         </reference>
     </PRODUCT_TYPE_configurable>
 </layout>
